scalar product properties

--- a/index.html
+++ b/index.html
@@ -159,108 +159,108 @@
                 </li>
             </ol>
         </p>
-        <h3>طرح شعاعين</h3>
+        <h3>طرح مُتَّجِهين</h3>
         <p>
-            عملية طرح الشعاع $\vect{B}$ من $\vect{A}$ تعني بشكل مكافئ جمع الشعاع $\vect{A}$ مع الشعاع الذي له طويلة الشعاع $\vect{B}$ نفسها لكن جهته تعاكس جهة الشعاع $\vect{B}$.
+            عملية طرح المُتَّجِه $\vect{B}$ من $\vect{A}$ تعني بشكل مكافئ جمع المُتَّجِه $\vect{A}$ مع المُتَّجِه الذي له طويلة المُتَّجِه $\vect{B}$ نفسها لكن جهته تعاكس جهة المُتَّجِه $\vect{B}$.
             يتم طرح مُتَّجِهين هندسياً كما يلي:
         </p>
         <p>
             <ol>
                 <li>
-                    نضع بداية الشعاعين $\vect{A}$ و $\vect{B}$ عند النقطة نفسها.
+                    نضع بداية المُتَّجِهين $\vect{A}$ و $\vect{B}$ عند النقطة نفسها.
                 </li>
                 <li>
-                    نرسم الشعاع $-\vect{B}$  الذي طويلته تساوي طويلة الشعاع $\vect{B}$ لكن يعاكس اتجاهه.
+                    نرسم المُتَّجِه $-\vect{B}$  الذي طويلته تساوي طويلة المُتَّجِه $\vect{B}$ لكن يعاكس اتجاهه.
                 </li>
                 <li>
-                    نرسم ممدداً من الشعاع $-\vect{B}$ موازياً للشعاع $\vect{A}$ و نرسم ممدداً آخر من الشعاع $\vect{A}$ موازياُ للشعاع $-\vect{B}$.
+                    نرسم ممدداً من المُتَّجِه $-\vect{B}$ موازياً للمُتَّجِه $\vect{A}$ و نرسم ممدداً آخر من المُتَّجِه $\vect{A}$ موازياُ للمُتَّجِه $-\vect{B}$.
                 </li>
                 <li>
-                    نقطة تلاقي الممددين تعطي نقطة النهاية للشعاع $\vect{A}-\vect{B}$.
+                    نقطة تلاقي الممددين تعطي نقطة النهاية للمُتَّجِه $\vect{A}-\vect{B}$.
                 </li>
                 <li>
-                    نصل بين نقطة البداية للشعاعين $\vect{A}$ و $-\vect{B}$ مع نقطة النهاية التي حصلنا عليها فنحصل على الشعاع $\vect{A}-\vect{B}$.
+                    نصل بين نقطة البداية للمُتَّجِهين $\vect{A}$ و $-\vect{B}$ مع نقطة النهاية التي حصلنا عليها فنحصل على المُتَّجِه $\vect{A}-\vect{B}$.
                 </li>
             </ol>
         </p>
-        <h3>خصائص جمع الأشعة</h3>
+        <h3>خصائص جمع المُتَّجِهات</h3>
         <p>
             <ol>
                 <li>
-                    عملية جمع الأشعة عملية تبديلية:
+                    عملية جمع المُتَّجِهات عملية تبديلية:
                     \begin{equation*}
                         \vect{A}+\vect{B}=\vect{B}+\vect{A}
                     \end{equation*}
                 </li>
                 <li>
-                    عملية جمع الأشعة عملية تجميعية:
+                    عملية جمع المُتَّجِهات عملية تجميعية:
                     \begin{equation*}
                         \left( \vect{A}+\vect{B} \right) + \vect{C} = \vect{A} + \left( \vect{B}+\vect{C} \right)
                     \end{equation*}
                 </li>
                 <li>
-                    يوجد شعاع صفري $\vect{0}$ يحقق ما يلي من أجل أي شعاع $\vect{A}$:
+                    يوجد مُتَّجِه صفري $\vect{0}$ يحقق ما يلي من أجل أي مُتَّجِه $\vect{A}$:
                     \begin{equation*}
                         \vect{A} + \vect{0} = \vect{0} + \vect{A} = \vect{A}
                     \end{equation*}
                 </li>
                 <li>
-                    من أجل أي شعاع $\vect{A}$، يوجد شعاع $-\vect{A}$ يحقق:
+                    من أجل أي مُتَّجِه $\vect{A}$، يوجد مُتَّجِه $-\vect{A}$ يحقق:
                     \begin{equation*}
                         \vect{A} + \left( -\vect{A} \right) = \left( -\vect{A} \right) + \vect{A} = \vect{0} 
                     \end{equation*}
                 </li>
             </ol>
         </p>
-        <h2>ضرب الأشعة</h2>
-        <h3>تغيير قياس الشعاع: ضرب الشعاع بمقدار سلمي</h3>
+        <h2>ضرب المُتَّجِهات</h2>
+        <h3>تغيير قياس المُتَّجِه: ضرب المُتَّجِه بمقدار سلمي</h3>
         <p>
-            يمكن تغيير قياس شعاع ما عن طريق ضرب طويلته بمقدار سلمي.
-            نعرف العملية التي نغير بها قياس الشعاع بالعلاقة:
+            يمكن تغيير قياس مُتَّجِه ما عن طريق ضرب طويلته بمقدار سلمي.
+            نعرف العملية التي نغير بها قياس المُتَّجِه بالعلاقة:
             \begin{equation}
                 \vect{A}=A\, \uvect{A}\Rightarrow k\,\vect{A}=\left( kA \right) \uvect{A}
             \end{equation}
-            عندما نضرب الشعاع بمقدار سلمي موجب فهذا يعني أننا نزيد من طول الشعاع أو ننقص منه و ذلك بحسب قيمة $k$،
-            فإذا كان $\left| k \right|&gt;1$ عندها طويلة الشعاع الناتج تكون أكبر من طويلة الشعاع الأصلي،
-            أما إذا كان $0&lt;\left| k \right|&lt;1$ فإن طويلة الشعاع الجديد أقل من طويلة الشعاع الأصلي،
-            و عندما يكون $k=0$ فإن الشعاع الناتج هو الشعاع الصفري $\vect{0}$.
-            يكون الشعاع الناتج من جهة الشعاع الأصلي إذا كان $k&gt;0$،
-            أما إذا كان $k&lt;0$ عندها الشعاع الجديد يعاكس جهة الشعاع الأصلي.
+            عندما نضرب المُتَّجِه بمقدار سلمي موجب فهذا يعني أننا نزيد من طول المُتَّجِه أو ننقص منه و ذلك بحسب قيمة $k$،
+            فإذا كان $\left| k \right|&gt;1$ عندها طويلة المُتَّجِه الناتج تكون أكبر من طويلة المُتَّجِه الأصلي،
+            أما إذا كان $0&lt;\left| k \right|&lt;1$ فإن طويلة المُتَّجِه الجديد أقل من طويلة المُتَّجِه الأصلي،
+            و عندما يكون $k=0$ فإن المُتَّجِه الناتج هو المُتَّجِه الصفري $\vect{0}$.
+            يكون المُتَّجِه الناتج من جهة المُتَّجِه الأصلي إذا كان $k&gt;0$،
+            أما إذا كان $k&lt;0$ عندها المُتَّجِه الجديد يعاكس جهة المُتَّجِه الأصلي.
         </p>
-        <h4>خصائص عملية ضرب الأشعة بمقدار سلمي</h4>
+        <h4>خصائص عملية ضرب المُتَّجِهات بمقدار سلمي</h4>
         <p>
-            لتكن $\vect{A}$ و $\vect{B}$ أشعة،
+            لتكن $\vect{A}$ و $\vect{B}$ مُتَّجِهات،
             و لتكن $k$ و $p$ أعداداً سلمية،
             نستعرض فيما يلي خصائص عملية الضرب بمقدار سلمي:
         </p>
         <ol>
             <li>
-                عملية ضرب الشعاع بمقدار سلمي هي عملية تبديلية:
+                عملية ضرب المُتَّجِه بمقدار سلمي هي عملية تبديلية:
                 \begin{equation}
                     k\,\vect{A}=\vect{A}\,k
                 \end{equation}
             </li>
             <li>
-                عملية ضرب الأشعة بمقدار سلمي هي عملية توزيعية:
+                عملية ضرب المُتَّجِهات بمقدار سلمي هي عملية توزيعية:
                 \begin{equation}
                     k\left( \vect{A}+\vect{B} \right)=k\vect{A}+k\vect{B}
                     \label{eq:scalingisassociative}
                 \end{equation}
             </li>
             <li>
-                عملية ضرب الأعداد السلمية بشعاع أيضاً عملية توزيعية، هذا يعني أن:
+                عملية ضرب الأعداد السلمية بمُتَّجِه أيضاً عملية توزيعية، هذا يعني أن:
                 \begin{equation}
                     \left( k + p \right) \vect{A} = k\vect{A} + p\vect{A}
                 \end{equation}
             </li>
             <li>
-                إن ضرب الأعداد السلمية بشعاع هو عملية تجميعية، هذا يعني أنه لو ضربنا الشعاع بمقدار سلمي و من ثم ضربنا الناتج بمقدار سلمي فإننا نحصل على النتيجة نفسها عند ضرب العددين مع بعضهما و من ثم ضرب الناتج بالشعاع:
+                إن ضرب الأعداد السلمية بمُتَّجِه هو عملية تجميعية، هذا يعني أنه لو ضربنا المُتَّجِه بمقدار سلمي و من ثم ضربنا الناتج بمقدار سلمي فإننا نحصل على النتيجة نفسها عند ضرب العددين مع بعضهما و من ثم ضرب الناتج بالمُتَّجِه:
                 \begin{equation}
                     k (p\,\vect{A}) = (kp) \vect{A}
                 \end{equation}
             </li>
             <li>
-                إن ضرب أي شعاع بالعدد $1$ يعطي الشعاع نفسه:
+                إن ضرب أي مُتَّجِه بالعدد $1$ يعطي المُتَّجِه نفسه:
                 \begin{equation}
                     1\left( \vect{A} \right) = \vect{A}
                 \end{equation}
@@ -274,44 +274,83 @@
         </ol>
         <h4>الارتباط الخَطِّي و الاستقلال الخَطِّي</h4>
         <p>
-            نقول عن شعاع $\vect{A}$ أنه مرتبط خطياً مع شعاع آخر $\vect{B}$ إذا وُجِدَ مقداراً سلمياً $k \neq 0$ يحقق $\vect{B} = k\, \vect{A}$.
-            هذا يعني أنه إذا كان الشعاعين $\vect{A}$ و $\vect{B}$ <span class="phrase">مرتبطين خطياً linearly dependent</span> فإن حاملين هذين الشعاعين يكون مشتركاً.
-            أما إذا كان $k=0$ هو المقدار السلمي الوحيد الذي يحقق $\vect{B} = k\, \vect{A}$ عندها نقول عن الشعاعين أنهما <span class="phrase">مستقلين خطياً linearly independent</span>، و هذا يعني أن لكل شعاع حامل مختلف.
+            نقول عن مُتَّجِه $\vect{A}$ أنه مرتبط خطياً مع مُتَّجِه آخر $\vect{B}$ إذا وُجِدَ مقداراً سلمياً $k \neq 0$ يحقق $\vect{B} = k\, \vect{A}$.
+            هذا يعني أنه إذا كان المُتَّجِهين $\vect{A}$ و $\vect{B}$ <span class="phrase">مرتبطين خطياً linearly dependent</span> فإن حاملين هذين المُتَّجِهين يكون مشتركاً.
+            أما إذا كان $k=0$ هو المقدار السلمي الوحيد الذي يحقق $\vect{B} = k\, \vect{A}$ عندها نقول عن المُتَّجِهين أنهما <span class="phrase">مستقلين خطياً linearly independent</span>، و هذا يعني أن لكل مُتَّجِه حامل مختلف.
         </p>
         <p>
-            بإمكاننا تعميم الارتباط الخطي و الاستقلال الخطي بين شعاعين إلى مجموعة من الأشعة.
-            إذا كانت لدينا الأشعة $\vect{A}_{1},\vect{A}_{2},\dots,\vect{A}_{n}$ و استطعنا إيجاد أعداداً سلمية $a_{1},a_{2},\dots,a_{n}$ لا تساوي الصفر بحيث تحقق:
+            بإمكاننا تعميم الارتباط الخطي و الاستقلال الخطي بين مُتَّجِهين إلى مجموعة من المُتَّجِهات.
+            إذا كانت لدينا المُتَّجِهات $\vect{A}_{1},\vect{A}_{2},\dots,\vect{A}_{n}$ و استطعنا إيجاد أعداداً سلمية $a_{1},a_{2},\dots,a_{n}$ لا تساوي الصفر بحيث تحقق:
             \begin{equation}
                 a_{1} \vect{A}_{1} + a_{2} \vect{A}_{2} + \dots + a_{n} \vect{A}_{n} = \vect{0}
                 \label{eq:linear-dependence-of-vectors}
             \end{equation}
-            عندئذٍ نقول عن الأشعة $\vect{A}_{1},\vect{A}_{2},\dots,\vect{A}_{n}$ أنها مرتبطة خطياً.
+            عندئذٍ نقول عن المُتَّجِهات $\vect{A}_{1},\vect{A}_{2},\dots,\vect{A}_{n}$ أنها مرتبطة خطياً.
             أما إذا كان الحل الوحيد الذي يحقق $(\ref{eq:linear-dependence-of-vectors})$ هو أن يكون
             $a_{1}=a_{2}=\dots=a_{n}=0$
-            عندئذٍ نقول عن الأشعة $\vect{A}_{1},\vect{A}_{2},\dots,\vect{A}_{n}$ أنها مستقلة خطياً عن بعضها البعض.
+            عندئذٍ نقول عن المُتَّجِهات $\vect{A}_{1},\vect{A}_{2},\dots,\vect{A}_{n}$ أنها مستقلة خطياً عن بعضها البعض.
         </p>
-        <h4>التركيب الخَطِّي للأشعة</h4>
+        <h4>التركيب الخَطِّي للمُتَّجِهات</h4>
         <p>
             ليكن لدينا الأشِعَّة $\vect{A}_{1},\vect{A}_{2},\dots,\vect{A}_{n}$، و المقاديرالسُّلَّمِيَّة $a_{1},a_{2},\dots,a_{n}$.
-            نقول عن الشعاع
+            نقول عن المُتَّجِه
             \begin{equation}
                 \vect{A} = a_{1} \vect{A}_{1} + a_{2} \vect{A}_{2} + \dots + a_{n} \vect{A}_{n}
             \end{equation}
             أنه <span class="phrase">تركيب خطي linear combination</span>
-            من الأشعة $\vect{A}_{1},\vect{A}_{2},\dots,\vect{A}_{n}$،
+            من المُتَّجِهات $\vect{A}_{1},\vect{A}_{2},\dots,\vect{A}_{n}$،
             و أن الأعداد السلمية $a_{1},a_{2},\dots,a_{n}$
-            هي مقدار مساهمة كل شعاع من هذه الأشعة في تشكيل الشعاع $\vect{A}$.
+            هي مقدار مساهمة كل مُتَّجِه من هذه المُتَّجِهات في تشكيل المُتَّجِه $\vect{A}$.
         </p>
         <h3>الجُداء السُّلَّمِي</h3>
         <p>
             نعرف <span class="phrase">الجُداء السُّلَّمِي</span>
-            بين شعاعين $\vect{A}$ و $\vect{B}$ و الذي نرمز له $\vect{A}\cdot\vect{B}$ على أنه جداء طوليتي الشعاعين $\vect{A}$ و $\vect{B}$ و كوساين أصغر زاوية بينهما، أي أن:
+            بين مُتَّجِهين $\vect{A}$ و $\vect{B}$ و الذي نرمز له $\vect{A}\cdot\vect{B}$ على أنه جداء طوليتي المُتَّجِهين $\vect{A}$ و $\vect{B}$ و كوساين أصغر زاوية بينهما، أي أن:
             \begin{equation}
                 \vect{A}\cdot\vect{B} = \norm{\vect{A}} \norm{\vect{B}} \cos{\phi_{AB}}
             \end{equation}
             حيث أن $\phi_{AB}$ هي أصغر زاوية بين $\vect{A}$ و $\vect{B}$.
-            إن نتيجة الجداء السلمي بين شعاعين هي مقدار سلمي.
+            إن نتيجة الجداء السلمي بين مُتَّجِهين هي مقدار سلمي.
         </p>
+        <h4>خصائص عملية الجداء السلمي</h4>
+        <p>يمتلك الجداء السلمي عدداً من الخصائص سوف نستفيد منها لاحقاً وهي:</p>
+        <ol>
+            <li>
+                من أجل أي زاوية $0\le \phi_{AB} \le \pi/2$، يكون الجداء السلمي موجباً. أما من أجل $\pi/2 \le \phi_{AB} \le \pi$، يكون الجداء السلمي سالباً.
+            </li>
+            <li>
+                قيمة الجداء السلمي لأي <span class="phrase">مُتَّجِهين متعامدين orthogonal vectors</span> تساوي الصفر، أي من أجل جميع الزوايا $\phi_{AB}= \displaystyle \frac{\pi}{2}+n \pi$ حيث $n=0,\pm 1, \pm 2, \pm 3, \dots$.
+            </li>
+            <li>
+                من أجل $\phi_{AB}=0$ (مُتَّجِهين متوازيين)،
+                تكون قيمة الجداء السلمي مساوية إلى $AB$،
+                و من أجل $\phi_{AB}=-\pi$ (مُتَّجِهين متوازيين عكسياً)
+                تكون قيمة الجداء السلمي مساوية إلى $\left(-AB\right)$.
+            </li>
+            <li>
+                طويلة الجداء السلمي لمُتَّجِهين هي دوماً أصغر أو تساوي جداء طويلتي المُتَّجِهين، أي
+                \begin{equation}
+                    \left| \vect{A}\cdot\vect{B} \right| \le \norm{\vect{A}} \norm{\vect{B}}
+                    \label{eq:chachy-shcwarz-inequality}
+                \end{equation}
+                العلاقة $\ref{eq:chachy-shcwarz-inequality}$ تسمى <span class="phrase">متراجحة كوتشي-شوارز Chauchy-Schwarz</span>.
+            </li>
+            <li>
+                يمكن النظر إلى الجداء السلمي على أنه جداء طويلة المُتَّجِه $\vect{A}$ مع طويلة مسقط المُتَّجِه $\vect{B}$ على المُتَّجِه $\vect{A}$ أو العكس بالعكس، أي $\left( \vect{A}\cdot\vect{B} = A \left( B \cos{\phi_{AB}} \right) = B \left( A \cos{\phi_{AB}} \right) \right)$.
+            </li>
+            <li>
+                الجداء السُّلَّمِي عملية تبديلية:
+                \begin{equation}
+                    \vect{A}\cdot\vect{B}=\vect{B}\cdot\vect{A}
+                \end{equation}
+            </li>
+            <li>
+                الجداء السُّلَّمِي عملية توزيعية
+                \begin{equation}
+                    \vect{A}\cdot\left( \vect{B} + \vect{C} \right) = \vect{A}\cdot\vect{B} + \vect{A}\cdot\vect{C}
+                \end{equation}
+            </li>
+        </ol>
     </div>
 </body>
 </html>
