--- a/index.html
+++ b/index.html
@@ -331,9 +331,9 @@
                 طويلة الجداء السلمي لمُتَّجِهين هي دوماً أصغر أو تساوي جداء طويلتي المُتَّجِهين، أي
                 \begin{equation}
                     \left| \vect{A}\cdot\vect{B} \right| \le \norm{\vect{A}} \norm{\vect{B}}
-                    \label{eq:chachy-shcwarz-inequality}
+                    \label{eq:cauchy-shcwarz-inequality}
                 \end{equation}
-                العلاقة $\ref{eq:chachy-shcwarz-inequality}$ تسمى <span class="phrase">متراجحة كوتشي-شوارز Chauchy-Schwarz</span>.
+                العلاقة $\ref{eq:cauchy-shcwarz-inequality}$ تسمى <span class="phrase">متراجحة كوتشي-شوارز Cauchy-Schwarz</span>.
             </li>
             <li>
                 يمكن النظر إلى الجداء السلمي على أنه جداء طويلة المُتَّجِه $\vect{A}$ مع طويلة مسقط المُتَّجِه $\vect{B}$ على المُتَّجِه $\vect{A}$ أو العكس بالعكس، أي $\left( \vect{A}\cdot\vect{B} = A \left( B \cos{\phi_{AB}} \right) = B \left( A \cos{\phi_{AB}} \right) \right)$.
