--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="preamble.js"></script>
     <title>جبر المُتَّجِهَات</title>
 </head>
-<body>
+<body class="bg-dark text-white">
     <div class="container">
         <h1 class="mt-3">جبر المُتَّجِهَات Vector Algebra</h1>
         <h2>مقدِّمة عن المُتَّجِهَات</h2>
@@ -58,7 +58,7 @@
                 \mathrm{if}\, A=0 \Rightarrow \vect{A}=\vect{0}
             \end{equation}
         </p>
-        <div class="card border-danger mb-3">
+        <div class="card bg-danger mb-3">
             <div class="card-header bg-danger text-white">
                 ملاحظة
             </div>
@@ -417,7 +417,7 @@
             إن طبيعة تعريف الجداء السلمي و الجداء الشعاعي لا تسمح لنا بالحصول على جميع الإمكانيات في هذه الحالة،
             بمعنى أنه يجب مراعاة طبيعة الكمية الناتجة عن الجداء الأول و طبيعة الكمية الثانية التي يتم إدخالها مع النتيجة الأولى في الجداء الثاني، وهكذا.
         </p>
-        <div class="card mb-3">
+        <div class="card bg-secondary mb-3">
             <div class="card-body">
                 <p class="card-text text-center">
                     الأنواع التالية من الجداءات الثلاثية معرّفة بشكل سليم:
