--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <span class="phrase">طَوِيْلَة magnitude</span> المُتَّجِه، 
             نَرْمُز لِمقدار مُتَّجِه ما بالرمز $\vect{A}$ (حرف ثخين فوقه سهم) أو $\overrightarrow{PQ}$ و المقصود به المُتَّجِه من النقطة $P$ إلى النقطة $Q$.
             نَرْمُز  لطَوِيْلَة المُتَّجِه $\vect{A}$ بالرمز $\norm{\vect{A}}$ أو ببساطة $A$،
-            و نَرْمُز  لطَوِيْلَة المُتَّجِه $\overrightarrow{PQ}$ بالرمز $|\overrightarrow{PQ}|$.
+            و نَرْمُز  لطَوِيْلَة المُتَّجِه $\overrightarrow{PQ}$ بالرمز $\|\overrightarrow{PQ}\|$.
             \begin{equation}
                 A=\norm{\vect{A}}, \qquad A \ge 0
             \end{equation}
@@ -451,7 +451,7 @@
                 \end{equation}
                 هذا يعني أن ترتيب الجداء المُتَّجِهي بين المُتَّجِهَات أمرٌ مهمٌ،
                 لهذا السبب ينبغي دوماً استخدام الأقواس في عمليات الجداء المُتَّجِهي.
-                إن العبارة $\vect{A}\times\vect{B}\times\vect{C}$ ليست عبارة سُلَّمِية لعدم وجود الأقواس و التي تحدد الأولوية في عملية الجداء المُتَّجِهي لأنه كما ذكرنا سابقاً الجداء المُتَّجِهي ليس تجميعياً.
+                إن العبارة $\vect{A}\times\vect{B}\times\vect{C}$ ليست عبارة سليمة لعدم وجود الأقواس و التي تحدد الأولوية في عملية الجداء المُتَّجِهي لأنه كما ذكرنا سابقاً الجداء المُتَّجِهي ليس تجميعياً.
                 يسمح الطرف الأيمن من العلاقة $(\ref{eq:vector-triple-product-identity})$ معرفة الترتيب الذي تتم به عملية الجداء الثلاثي المُتَّجِهي.
             </li>
         </ol>
