--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="الطرائق الرياضياتية و الحاسوبية في العلوم النظرية و التجريبية"
+      content="موقع لتعلم الرياضيات و تطبيقاتها في العلوم الأخرى باستخدام لغات البرمجة."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -34,7 +34,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>الصفحة الرئيسية</title>
 </head>
 <body class="bg-dark text-white">
   <noscript>عليك تفعيل JavaScript حتى يعمل هذا التطبيق.</noscript>
