definition of vector in cartesian coordinates

--- a/src/html/vector_algebra_cartesian.html
+++ b/src/html/vector_algebra_cartesian.html
@@ -19,6 +19,32 @@
 <body class="bg-dark text-white">
     <div class="container">
         <h1>الأشعة في الإحداثيات الديكارتية</h1>
+        <p>
+            نُذَكِّرُ بأن الإحداثيات الديكارتية عبارة عن جملة من المحاور الإحداثية المتعامدة فيما بينها
+            و تكون القسيمات لهذه المحاور متساوية،
+            تتلاقى هذه المحاور عند نقطة مشتركة تدعى مبدأ الإحداثيات $O$.
+            سَنُعَرِّف أشعة الواحدة الموجودة على المحاور في الإحداثيات الديكارتية.
+            ليكن $\uvect{e}_{x}$ شعاع الواحدة المحمول على المحور $x$ و جهته من مبدأ الإحداثيات إلى الاتجاه الموجب للمحور $x$،
+            و ليكن $\uvect{e}_{y}$ شعاع الواحدة المحمول على المحور $y$ و جهته من مبدأ الإحداثيات إلى الاتجاه الموجب للمحور $y$،
+            و ليكن $\uvect{e}_{z}$ شعاع الواحدة المحمول على المحور $z$ و جهته من مبدأ الإحداثيات إلى الاتجاه الموجب للمحور $z$.
+            يمكن كتابة جميع الأشعة في الفضاء ثلاثي الأبعاد بدلالة أشعة الواحدة للإحداثيات الديكارتية.
+        </p>
+        <h2>تعريف الشعاع في الإحداثيات الديكارتية</h2>
+        <p>
+            نعرف شعاعاً $\vect{A}$ في الإحداثيات الديكاريتية ضمن الفضاء ثلاثي الأبعاد $\mathbb{R}^{3}$ بالعلاقة:
+            \begin{equation}
+                \vect{A} = A_{x} \uvect{e}_{x} + A_{y} \uvect{e}_{y} + A_{z} \uvect{e}_{z}
+            \end{equation}
+            ندعو $A_{x}$ و $A_{y}$ و $A_{z}$ مركبات الشعاع $\vect{A}$ حيث $A_{x}$ هي مركبة الشعاع على المحور $x$ و $A_{y}$ هي مركبة الشعاع على المحور $y$ و $A_{z}$ هي مركبة الشعاع على المحور $z$.
+            أيضاً من الممكن كتابة شعاع ما على النحو
+            \begin{equation}
+                \vect{A} = \left( A_{x}, A_{y}, A_{z} \right)
+            \end{equation}
+            و طويلة الشعاع $\vect{A}$ هي
+            \begin{equation}
+                \abs{\vect{A}} = \sqrt{\left(  A_{x} \right)^{2} + \left( A_{y} \right)^{2} + \left( A_{z} \right)^{2}}
+            \end{equation}
+        </p>
         
     </div>
 </body>
