vector subtraction cartesian

--- a/src/html/vector_algebra_cartesian.html
+++ b/src/html/vector_algebra_cartesian.html
@@ -79,6 +79,27 @@
                 </p>
             </div>
         </div>
+        <p>
+            لنرى كيف تتم عملية طرح شعاعين في الإحداثيات الديكارتية، ليكن $\vect{D}=\vect{A}-\vect{B}$:
+            \begin{equation}
+                \begin{split}
+                    \vect{D}&=\left( A_{x}\uvect{e}_{x}+A_{y}\uvect{e}_{y}+A_{z}\uvect{e}_{z} \right)-\left( B_{x}\uvect{e}_{x}+B_{y}\uvect{e}_{y}+B_{z}\uvect{e}_{z} \right) \\
+                    &=\left( A_{x}-B_{x} \right)\uvect{e}_{x}+\left( A_{y}-B_{y} \right)\uvect{e}_{y}+\left( A_{z}-B_{z} \right)\uvect{e}_{z} \\
+                    &= D_{x}\uvect{e}_{x} + D_{y}\uvect{e}_{y} + D_{z}\uvect{e}_{z}
+                \end{split}
+            \end{equation}
+        </p>
+        <div class="card bg-secondary">
+            <div class="card-body">
+                <p class="card-text">
+                    إذا كان $\vect{A} = \left( A_{x}, A_{y}, A_{z} \right)$ و $\vect{B} = \left( B_{x}, B_{y}, B_{z} \right)$ فإن حاصل طرح شعاعين في الإحداثيات الديكارتية هو
+                    \begin{equation}
+                        \vect{A} - \vect{B} = \left( A_{x} - B_{x}, A_{y} - B_{y}, A_{z} - B_{z} \right)
+                    \end{equation}
+                    نرى إذاً أننا نطرح المركبات التي تكون على المحور نفسه.
+                </p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
