--- a/src/html/vector_algebra_cartesian.html
+++ b/src/html/vector_algebra_cartesian.html
@@ -100,6 +100,18 @@
                 </p>
             </div>
         </div>
+        <h3>ضرب الأشعة بمقدار سلمي</h3>
+        <p>
+            لنرى الآن كيف ستكون عملية ضرب الشعاع بعدد سلمي في الإحداثيات الديكارتية، من أجل شعاع $\vect{A}=A_{x}\uvect{e}_{x}+A_{y}\uvect{e}_{y}+A_{z}\uvect{e}_{z}$ و عدد سلمي $k$ يكون:
+            \begin{equation}
+                \begin{split}
+                    k\vect{A}&=k\left( A_{x}\uvect{e}_{x}+A_{y}+\uvect{e}_{y}+A_{z}\uvect{e}_{z} \right) \\
+                    &=\left( k A_{x} \right) \uvect{e}_{x} + \left( k A_{y} \right) \uvect{e}_{y} + \left( k A_{z} \right) \uvect{e}_{z}
+                \end{split}
+            \end{equation}
+            هذا يعني أنه عندما نضرب شعاعاً ما بمقدار سلمي،
+            فإننا نضرب جميع مركبات هذا الشعاع بالمقدار السلمي.
+        </p>
     </div>
 </body>
 </html>
